resolved the songsplay issue

--- a/test.ipynb
+++ b/test.ipynb
@@ -164,13 +164,6 @@
        "        <th>level</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>22</td>\n",
-       "        <td>Sean</td>\n",
-       "        <td>Wilson</td>\n",
-       "        <td>F</td>\n",
-       "        <td>free</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>87</td>\n",
        "        <td>Dustin</td>\n",
        "        <td>Lee</td>\n",
@@ -185,27 +178,34 @@
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>4</td>\n",
-       "        <td>Alivia</td>\n",
-       "        <td>Terrell</td>\n",
+       "        <td>95</td>\n",
+       "        <td>Sara</td>\n",
+       "        <td>Johnson</td>\n",
        "        <td>F</td>\n",
+       "        <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>18</td>\n",
+       "        <td>Jacob</td>\n",
+       "        <td>Rogers</td>\n",
+       "        <td>M</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>56</td>\n",
-       "        <td>Cienna</td>\n",
-       "        <td>Freeman</td>\n",
+       "        <td>64</td>\n",
+       "        <td>Hannah</td>\n",
+       "        <td>Calhoun</td>\n",
        "        <td>F</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(22, 'Sean', 'Wilson', 'F', 'free'),\n",
-       " (87, 'Dustin', 'Lee', 'M', 'free'),\n",
+       "[(87, 'Dustin', 'Lee', 'M', 'free'),\n",
        " (59, 'Lily', 'Cooper', 'F', 'free'),\n",
-       " (4, 'Alivia', 'Terrell', 'F', 'free'),\n",
-       " (56, 'Cienna', 'Freeman', 'F', 'free')]"
+       " (95, 'Sara', 'Johnson', 'F', 'paid'),\n",
+       " (18, 'Jacob', 'Rogers', 'M', 'free'),\n",
+       " (64, 'Hannah', 'Calhoun', 'F', 'free')]"
       ]
      },
      "execution_count": 4,
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -309,7 +309,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -323,13 +323,52 @@
        "        <th>latitude</th>\n",
        "        <th>longitude</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARD0S291187B9B7BF5</td>\n",
+       "        <td>Rated R</td>\n",
+       "        <td>Ohio</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARKFYS91187B98E58F</td>\n",
+       "        <td>Jeff And Sheri Easter</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>AR8ZCNI1187B9A069B</td>\n",
+       "        <td>Planet P Project</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARGSJW91187B9B1D6B</td>\n",
+       "        <td>JennyAnyKind</td>\n",
+       "        <td>North Carolina</td>\n",
+       "        <td>35.21962</td>\n",
+       "        <td>-80.01955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARKRRTF1187B9984DA</td>\n",
+       "        <td>Sonora Santanera</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "        <td>None</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[('ARD0S291187B9B7BF5', 'Rated R', 'Ohio', None, None),\n",
+       " ('ARKFYS91187B98E58F', 'Jeff And Sheri Easter', None, None, None),\n",
+       " ('AR8ZCNI1187B9A069B', 'Planet P Project', None, None, None),\n",
+       " ('ARGSJW91187B9B1D6B', 'JennyAnyKind', 'North Carolina', Decimal('35.21962'), Decimal('-80.01955')),\n",
+       " ('ARKRRTF1187B9984DA', 'Sonora Santanera', None, None, None)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -350,7 +389,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -366,13 +405,62 @@
        "        <th>year</th>\n",
        "        <th>weekday</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541207150796</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541207316796</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541207546796</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541207775796</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1541254670796</td>\n",
+       "        <td>0</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1970</td>\n",
+       "        <td>3</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[('1541207150796', 0, 1, 1, 1, 1970, '3'),\n",
+       " ('1541207316796', 0, 1, 1, 1, 1970, '3'),\n",
+       " ('1541207546796', 0, 1, 1, 1, 1970, '3'),\n",
+       " ('1541207775796', 0, 1, 1, 1, 1970, '3'),\n",
+       " ('1541254670796', 0, 1, 1, 1, 1970, '3')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
